Moving away from bootstrap 2 navbar collapse as there are too many issues with it on varying platforms

--- a/public/css/sneezy.css
+++ b/public/css/sneezy.css
@@ -265,6 +265,9 @@ label {
     color: purple;
 }
 
-
+.navbar-inner .container {
+    overflow: hidden;
+    height: 40px;
+}
 
 
